--- a/src/assets/components/conference-time/conference-time.scss
+++ b/src/assets/components/conference-time/conference-time.scss
@@ -16,7 +16,7 @@
     flex-direction: column;
     justify-content: center;
      & span {
-      color: #fff;
+      color:rgb(25, 110, 221);
       font-weight: 600;
       font-size: 16px;
      }
