--- a/src/assets/components/conference/conference.scss
+++ b/src/assets/components/conference/conference.scss
@@ -7,6 +7,7 @@
   text-decoration: none;
   color:rgb(25, 110, 221);
   border: 2px solid #ffa111;
+  border-radius: 15px;
   width: 230px;
   height: 340px;
   box-sizing: border-box;
@@ -26,9 +27,10 @@
     height: 80px;
     position: absolute;
     border: 2px solid #ffa111;
+    border-radius: 10px;
     top: -40px;
     left: calc(50% - 40px);
-    background-color:rgb(5, 33, 83);
+    background-color: #fff;
     transition: .3s;
   }
   &__title {
