--- a/src/assets/components/current-conference/current-conference.scss
+++ b/src/assets/components/current-conference/current-conference.scss
@@ -4,6 +4,7 @@
   .cc__heading {
     display: flex;
     align-items: center;
+    justify-content: center;
     height: 110px;
     width: 100%;
     margin-bottom: 30px;
@@ -19,7 +20,6 @@
       font-size: 16px;
     }
     &-title {
-      width: 70%;
       text-align: center;
       font-size: 28px;
       margin-left: 60px;
@@ -75,19 +75,34 @@
         background-color: rgba(25, 110, 221, 0.14);
         margin-bottom: 20px;
         padding: 20px;
-
       }
 
     }
   }
 }
-::-webkit-scrollbar {
-  display: none;
-}
 html {
   scrollbar-width: none;
 }
+::-webkit-scrollbar {
+  width: 5px;
+}
 
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 1px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background:rgb(25, 110, 221); 
+  border-radius: 3px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
+}
 .no-scrollbar {
   overflow: auto;
   -ms-overflow-style: none;
