--- a/src/assets/components/author/author.scss
+++ b/src/assets/components/author/author.scss
@@ -7,19 +7,11 @@
     justify-content: space-between;
     width: 100%;
     height: 100px;
-    .logo-c {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 200px;
-      height: 90px;
-      border: 2px solid #ffa111;
-      box-sizing: border-box;
-      font-size: 16px;
-    }
+    
     &-title {
+      width: 100%;
+      text-align: center;
       font-size: 32px;
-      width: 65%;
       color:rgb(25, 110, 221);
 
     }
@@ -37,16 +29,3 @@
     }
   }
 }
-
-// ::-webkit-scrollbar {
-//   display: none;
-// }
-// html {
-//   scrollbar-width: none;
-// }
-
-// .no-scrollbar {
-//   overflow: auto;
-//   -ms-overflow-style: none;
-//   scrollbar-width: none;
-// }
