--- a/src/assets/components/conference-list/conference-list.scss
+++ b/src/assets/components/conference-list/conference-list.scss
@@ -1,7 +1,25 @@
 .conference__list {
   width: 1200px;
+  height: max-content;
   margin: 0 auto;
   margin-top: 110px;
   display: flex;
   justify-content: space-between;
+}
+@media only screen and (max-width: 767px) and (min-width: 300px) {
+  .conference__list {
+    width: 90%;
+    gap: 60px;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media only screen and (max-width: 1199px) and (min-width: 768px) {
+  .conference__list {
+    width: 90%;
+    gap: 60px;
+    flex-direction: column;
+    align-items: center;
+  }
 }
