--- a/src/assets/components/author/author.scss
+++ b/src/assets/components/author/author.scss
@@ -29,3 +29,14 @@
     }
   }
 }
+
+@media only screen and (max-width: 767px) and (min-width: 300px) {
+  .author {
+    width: 90%;
+  }
+}
+@media only screen and (max-width: 1199px) and (min-width: 768px) {
+  .author {
+    width: 90%;
+  }
+}
