--- a/src/assets/components/conference/conference.scss
+++ b/src/assets/components/conference/conference.scss
@@ -6,7 +6,8 @@
   padding-top: 40px;
   text-decoration: none;
   color:rgb(25, 110, 221);
-  border: 2px solid #ffa111;
+  border: 3px solid rgb(25, 110, 221);
+
   border-radius: 15px;
   width: 230px;
   height: 340px;
@@ -26,7 +27,7 @@
     width: 80px;
     height: 80px;
     position: absolute;
-    border: 2px solid #ffa111;
+    border: 3px solid rgb(25, 110, 221);
     border-radius: 10px;
     top: -40px;
     left: calc(50% - 40px);
